Allow sorting repo in topics api endpoint
